💡 core: Add comment on FlavorManager.